# enterprise-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.ai/: 00_Project_Constitution.md  01_Architecture.md  02_Roadmap.md  03_Coding_Rules.md  09_Decisions.md  10_RAG_Provider_Architecture.md  11_RAGFlow_API_Contract.md  12_Customer_Service_Agent_Architecture.md  13_Customer_Service_Business_Rules.md  14_Product_Catalog_and_Recommendation.md  15_Customer_Service_Evaluation_Plan.md  ARCHITECTURE_SUMMARY.md  CODING_RULES.md  PROJECT_STATE.md
alembic/: env.py  script.py.mako
docs/: dev_quality.md
evaluation/: README.md  __init__.py  evaluator.py  metrics.py  report.json  report.py  run.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend-web/: .gitignore  index.html  package-lock.json  package.json
scripts/: link_product_manual.py  seed_customer_service_products.py
tests/: test_adaptive_retrieval_planning.py  test_adaptive_retrieval_strategy.py  test_advanced_chunking.py  test_agent_api.py  test_agent_definition.py  test_agent_loop_v2.py  test_agent_runtime.py  test_agent_tool_scope.py  test_agent_trace_contract.py  test_async_agent_runtime.py  test_context_builder.py  test_context_builder_hotfix.py  test_context_compression.py  test_document_identity.py  test_document_routing.py  test_dynamic_tool_registry.py  test_element_aware_chunking.py  test_embedding_batch_hotfix.py  test_evaluation.py  test_evaluation_v2.py  test_index_consistency_hotfix.py  test_knowledge_tool.py  (+18 more)
(+424 files in other folders)
