[project]
name = "enterprise-ai-platform"
version = "0.1.0"
description = "Enterprise RAG + Agent knowledge platform"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "B008",
    "UP046",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | alembic/versions
  | logs
  | data
)/
'''

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["backend"]
exclude = [
    "**/__pycache__",
    ".venv",
    "logs",
    "data",
    "alembic/versions",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportCallIssue = false
